# skill-ovos-stability-ai

./: README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
locale/en-us/: none.dialog  query.intent  stability_ai.intent
locale/fr-fr/: asking.dialog  done.dialog  error.dialog  query.intent
locale/pt-br/: none.dialog
locale/pt-pt/: asking.dialog  none.dialog  query.intent  stability_ai.intent
scripts/: prepare_translations.py  sync_translations.py
src/ovos_skill_stability_ai/locale/en-us/: done.dialog  query.intent
src/ovos_skill_stability_ai/locale/fr-fr/: stability_ai.intent
src/ovos_skill_stability_ai/locale/pt-br/: asking.dialog  error.dialog  query.intent
src/ovos_skill_stability_ai/locale/pt-pt/: done.dialog  error.dialog
src/ovos_skill_stability_ai/translations/pt-br/: dialogs.json
src/skill_ovos_stability_ai/locale/fr-fr/: none.dialog
src/skill_ovos_stability_ai/translations/en-us/: dialogs.json  intents.json
test/unittests/: plugin_tests.py  test_plugin.py  test_skill.py  test_skill_loading.py
translations/en-us/: intents.json
translations/fr-fr/: dialogs.json  intents.json
translations/pt-br/: intents.json
translations/pt-pt/: dialogs.json  intents.json
