[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ovos_skill_stability_ai = [
    "**/*.json",
    "**/*.rx",
    "**/*.dialog",
    "**/*.entity",
    "**/*.intent",
    "**/*.voc",
    "**/*.gif",
]

[tool.hatch.version]
path = "src/ovos_skill_stability_ai/__version__.py"

[project]
name = "ovos-skill-stability-ai"
keywords = [
    "ovos",
    "skill",
    "plugin",
    "stability",
    "ai",
    "image",
    "generation",
]
dynamic = ["version"]
authors = [
  { name="Flávio De Melo", email="flavio.eler@gmail.com" },
]
description = "Skill for generating images in OpenVoiceOS via Stability AI"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "ovos-utils",
    "ovos-workshop",
    "stability-ai-api",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-timeout",
    "ovos-core[skills_lgpl]>=0.0.5a28",
    "ovos-plugin-manager",
    "ovos-skills-manager",
]

[project.urls]
Homepage = "https://github.com/femelo/ovos-skill-stability-ai"
Issues = "https://github.com/femelo/ovos-skill-stability-ai/issues"

[project.entry-points."ovos.plugin.skill"]
"ovos-skill-stability-ai.femelo" = "ovos_skill_stability_ai:StabilityAiSkill"
